--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_TYPE=mysql
 DATABASE_HOST=localhost
-DATABASE_USER=dev
-DATABASE_PASSWORD=1
+DATABASE_USER=phongnho
+DATABASE_PASSWORD=Hao123!$
 DATABASE_PORT=3306
-DATABASE=dev
+DATABASE=phongnho
